--- a/public html/infopeperone.html
+++ b/public html/infopeperone.html
@@ -35,7 +35,8 @@
 <div class="info">
 	<h2>47^SAGRA DEL PEPERONE 2014</h2>
 	<img src="peperonelocandina.jpg" alt="Locandina 47^Sagra del Peperone 2014" />
-	<p> Il pi&#249 importante evento organizzato dalla Pro Loco di Zero Branco...... continua </p>
+	<p>La Pro Loco di Zero Branco organizza, con la vivacit&#224 che la contraddistingue, la 47&#170 edizione di questa manifestazione, da sempre molto attesa e partecipata, che costituisce un ulteriore impulso per tutti i volontari a proseguire una attivit&#224 territoriale che nel corso degli anni ha regalato molte soddisfazioni. Questa manifestazione &#232 entrata a far parte di un progetto molto ambizioso, denominato "Delizie d'Autunno" coordinato dall'UNPLI che nella provincia di Treviso coinvolge molte Pro Loco.</p>
+	<p>Il programma della Mostra interprovinciale del Peperone e dei Prodotti orticoli stagionali &#232 assai nutrito: esposizione-mercato di prodotti, mostra artigianale, mostra micologica, spettacoli (sia per adulti che per giovani), attivit&#224 contadina, eventi sportivi e ovviamente il peperone che troverete presente in numerosi piatti.</p>
 	<p><a href="peperoneprogramma.jpg">Scarica il programma completo</a></p>
 </div>
 <div class="footer">
