--- a/public html/inforadicchio.html
+++ b/public html/inforadicchio.html
@@ -29,9 +29,17 @@
 		<h1>Pro Loco di Zero Branco</h1>    
 </div>
 	<div class="path">
-		<p>Ti trovi in: Home > Eventi</p>
+		<p>Ti trovi in: Home > Eventi > Mostra del Radicchio 2015</p>
 	</div>
-</div> 
+</div>
+<div class="info">
+	<h2>22&#170 Mostra del Radicchio Rosso Tardivo di Treviso IGP 2015</h2>
+	<img src="images/radicchiolocandina.jpg" alt="Locandina 22&#170 Mostra del Radicchio Rosso Tardivo di Treviso IGP 2015" />
+	<p>Il radicchio rosso di Treviso IGP, conosciuto come il "Fiore d'Inverno", &#232 il protagonista di questa mostra. Da diverse edizioni, la nostra manifestazione fa parte del progetto "Fiori d'Inverno", nato dall'unione delle Pro Loco locali tramite l'UNPLI con l'obiettivo di dare coordinamento, qualificazione ed una promozione delle varie iniziative legate alla produzione ed al consumo delle variet&#224 del Radicchio IGP. 
+	<br>La Pro Loco di Zero Branco vuole inoltre sensibilizzare gli studenti delle scuole del Comune di Zero Branco e dei paesi limitrofi nella conoscenza del prodotto, tramite la partecipazione al concorso "L'acqua, il sole, la terra e le cure dell'uomo" con un numero di partecipanti ogni anno maggiore e con elaborati di sorprendente creativit&#224. </p>
+	<p>Per tutta la durata della 22&#170 Mostra del Radicchio si potranno degustare ottimi piatti ma anche birra, grappe, amari e dolci di produzione artigianale tutti a base di radicchio.</p>
+	<p><a href="radicchioprogramma.jpg">Scarica il programma completo</a></p>
+</div>
 <div class="footer">
 	<p>Pro Loco di Zero Branco</p>
 	<p>Telefono: <a href="tel:+39042297613">0422 97613</a></p>
