--- a/public html/infozerock.html
+++ b/public html/infozerock.html
@@ -35,7 +35,7 @@
 <div class="info">
 	<h2>Zerock 2015</h2>
 	<img src="zerocklocandina.jpg" alt="Locandina Zerock 2015" />
-	<p>......</p>
+	<p>Week-end di buona birra e tanto divertimento........ </p>
 	<p><a href="zerockprogramma.jpg">Scarica il programma completo</a></p>
 </div> 
 <div class="footer">
