--- a/public html/contatti.html
+++ b/public html/contatti.html
@@ -27,12 +27,12 @@
 
 <div class="horizontalmenu">
   <ul>
-    <li>Home</li>
+    <li><a href="nuovo.html">Home</li>
     <li><a href="eventi.xml">Eventi</a></li>
-    <li>Galleria</li>
-    <li>Curiosit&#224;</li>
+    <li><a href="galleria.html">Galleria</li>
+    <li><a href="curiosità.html">Curiosit&#224;</li>
     <li>Contatti</li>
-    <li>Opinioni</li>
+    <li><a href="opinioni.xml">Opinioni</li>
   </ul>
 </div>
 
@@ -40,6 +40,7 @@
 
 <h2>Contatti</h2>
   <p>Pro Loco di Zero Branco</p>
+  <p>Sede Legale: Via G.B. Guidini, 1</p>
   <p>Segreteria: Via Alessandro Manzoni, 20/D</p>
   <p>Zero Branco - 31059 (TV)</p>
   
