--- a/public html/curiosità.html
+++ b/public html/curiosità.html
@@ -27,12 +27,12 @@
 
 <div class="horizontalmenu">
   <ul>
-    <li>Home</li>
+    <li><a href="nuovo.html"></a>Home</li>
     <li><a href="eventi.xml">Eventi</a></li>
-    <li>Galleria</li>
+    <li><a href="galleria.html">Galleria</li>
     <li>Curiosit&#224;</li>
-    <li>Contatti</li>
-    <li>Opinioni</li>
+    <li><a href="contatti.html">Contatti</li>
+    <li><a href="opinioni.xml">Opinioni</li>
   </ul>
 </div>
 
