--- a/public html/infoasparago.html
+++ b/public html/infoasparago.html
@@ -15,30 +15,29 @@
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Cabin" />
 </head>
 <body>
-<div class="lista">
-	<ul>
-		<li><a href="template.html"><span xml:lang="en">Home</span></a></li>
-		<li class="currentLink">Eventi</li>
-		<li><a href="foto.html">Foto</a></li>
-		<li><a href="contatti.html">Contatti</a></li>
-		<li><a href="curiosita.html">Curiosit&#224 </a></li>
-    </ul>
+<div class="header">
+	<h1>Pro Loco di Zero Branco</h1>
 </div>
-<div class="inizio">  
-	<div class="header">
-		<h1>Pro Loco di Zero Branco</h1>
-	</div>
-	<div class="path">
-		<p>Ti trovi in: Home > Eventi > Mostra dell'Asparago e Festa di Primavera 2014</p>
-	</div>
+	
+<div class="horizontalmenu">
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="eventi.xml">Eventi</a></li>
+    <li><a href="galleria.html">Galleria</a></li>
+    <li><a href="curiosita.xml">Curiosit&#224;</a></li>
+    <li><a href="contatti.html">Contatti</a></li>
+    <li><a href="opinioni.xml">Opinioni</a></li>
+  </ul>
 </div>
-<div class="info">
+
+<div class="corpo">
 	<h2>18&#170 Mostra dell'Asparago e 10&#170 Festa di Primavera 2014</h2>
-	<img src="asparagolocandina.jpg" alt="Locandina 18&#170 Mostra dell'Asparago e 10&#170 Festa di Primavera 2014" />
+	<img src="images/asparagolocandina.jpg" alt="Locandina 18&#170 Mostra dell'Asparago e 10&#170 Festa di Primavera 2014" />
 	<p>Torna l'appunatamento con la Mostra dell'Asparago giunta alla 18&#170 edizione. Manifestazione che fa parte del progetto "Germogli di Primavera" che ha lo scopo di valorizzare questa primizia che la nostra terra ci offre. Nella via principale del paese verr&#224 allestita una ricca mostra di asparagi di vario tipo (sar&#224 possibile anche l'acquisto di asparagi). Una ricca mostra floreale e hobbistica far&#224 da splendida cornice nel cuore della piazza zerotina.</p>
 	<p>Durante le serate di questa manifestazione sar&#224 possibile, presso gli stand in Via Taliercio, degustare vari piatti a base di asparagi del nostro territorio.
-	<p><a href="asparagoprogramma.jpg">Scarica il programma completo</a></p>
+	<p><a href="images/asparagoprogramma.jpg">Scarica il programma completo</a></p>
 </div>
+
 <div class="footer">
 	<p>Pro Loco di Zero Branco</p>
 	<p>Telefono: <a href="tel:+39042297613">0422 97613</a></p>
