--- a/public html/infopeperone.html
+++ b/public html/infopeperone.html
@@ -15,29 +15,25 @@
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Cabin" />
 </head>
 <body>
-<div class="lista">
-	<ul>
-		<li><a href="template.html"><span xml:lang="en">Home</span></a></li>
-		<li class="currentLink">Eventi</li>
-		<li><a href="foto.html">Foto</a></li>
-		<li><a href="contatti.html">Contatti</a></li>
-		<li><a href="curiosita.html">Curiosit&#224 </a></li>
-    </ul>
+<div class="header">
+	<h1>Pro Loco di Zero Branco</h1>
 </div>
-<div class="inizio">  
-	<div class="header">
-		<h1>Pro Loco di Zero Branco</h1>    
-	</div>
-	<div class="path">
-		<p>Ti trovi in: Home > Eventi > Sagra del Peperone</p>
-	</div>
-</div> 
-<div class="info">
+<div class="horizontalmenu">
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="eventi.xml">Eventi</a></li>
+    <li><a href="galleria.html">Galleria</a></li>
+    <li><a href="curiosita.xml">Curiosit&#224;</a></li>
+    <li><a href="contatti.html">Contatti</a></li>
+    <li><a href="opinioni.xml">Opinioni</a></li>
+  </ul>
+</div>
+<div class="corpo">
 	<h2>47^SAGRA DEL PEPERONE 2014</h2>
-	<img src="peperonelocandina.jpg" alt="Locandina 47^Sagra del Peperone 2014" />
+	<img src="images/peperonelocandina.jpg" alt="Locandina 47^Sagra del Peperone 2014" />
 	<p>La Pro Loco di Zero Branco organizza, con la vivacit&#224 che la contraddistingue, la 47&#170 edizione di questa manifestazione, da sempre molto attesa e partecipata, che costituisce un ulteriore impulso per tutti i volontari a proseguire una attivit&#224 territoriale che nel corso degli anni ha regalato molte soddisfazioni. Questa manifestazione &#232 entrata a far parte di un progetto molto ambizioso, denominato "Delizie d'Autunno" coordinato dall'UNPLI che nella provincia di Treviso coinvolge molte Pro Loco.</p>
 	<p>Il programma della Mostra interprovinciale del Peperone e dei Prodotti orticoli stagionali &#232 assai nutrito: esposizione-mercato di prodotti, mostra artigianale, mostra micologica, spettacoli (sia per adulti che per giovani), attivit&#224 contadina, eventi sportivi e ovviamente il peperone che troverete presente in numerosi piatti.</p>
-	<p><a href="peperoneprogramma.jpg">Scarica il programma completo</a></p>
+	<p><a href="images/peperoneprogramma.jpg">Scarica il programma completo</a></p>
 </div>
 <div class="footer">
 	<p>Pro Loco di Zero Branco</p>
