--- a/public html/infozerock.html
+++ b/public html/infozerock.html
@@ -15,28 +15,25 @@
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Cabin" />
 </head>
 <body>
-<div class="lista">
-	<ul>
-		<li><a href="template.html"><span xml:lang="en">Home</span></a></li>
-		<li class="currentLink">Eventi</li>
-		<li><a href="foto.html">Foto</a></li>
-		<li><a href="contatti.html">Contatti</a></li>
-		<li><a href="curiosita.html">Curiosit&#224 </a></li>
-    </ul>
+<div class="header">
+	<h1>Pro Loco di Zero Branco</h1>
 </div>
-<div class="inizio">  
-	<div class="header">
-		<h1>Pro Loco di Zero Branco</h1>    
+<div class="horizontalmenu">
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="eventi.xml">Eventi</a></li>
+    <li><a href="galleria.html">Galleria</a></li>
+    <li><a href="curiosita.xml">Curiosit&#224;</a></li>
+    <li><a href="contatti.html">Contatti</a></li>
+    <li><a href="opinioni.xml">Opinioni</a></li>
+  </ul>
 </div>
-	<div class="path">
-		<p>Ti trovi in: Home > Eventi > Zerock 2015</p>
-	</div>
-</div>
-<div class="info">
+<div class="corpo">
 	<h2>Zerock 2015</h2>
-	<img src="zerocklocandina.jpg" alt="Locandina Zerock 2015" />
-	<p>Week-end di ottima birra artigianale e tanto divertimento con band che faranno ballare grandi e piccini. </p>
-	<p><a href="zerockprogramma.jpg">Scarica il programma completo</a></p>
+	<img src="images/zerocklocandina.jpg" alt="Locandina Zerock 2015" />
+	<p>Week-end di ottima birra artigianale e tanto divertimento con band che faranno ballare grandi e piccini. Ad accompagnare le più buone birre si potranno degustare i più svariati panini e pizze.</p>
+	<p>In occasione della serata country non potrà mancare l'originale mostra e sfilata di auto e moto americane che durerà per l'intera manifestazione.</p>
+	<p><a href="images/zerockprogramma.jpg">Scarica il programma completo</a></p>
 </div> 
 <div class="footer">
 	<p>Pro Loco di Zero Branco</p>
