--- a/public html/infozerock.html
+++ b/public html/infozerock.html
@@ -20,7 +20,7 @@
 </div>
 <div class="horizontalmenu">
   <ul>
-    <li><a href="index.html">Home</a></li>
+    <li><a href="index.html"><span xml:lang="en">Home</span></a></li>
     <li><a href="eventi.xml">Eventi</a></li>
     <li><a href="galleria.html">Galleria</a></li>
     <li><a href="curiosita.xml">Curiosit&#224;</a></li>
