--- a/public html/contatti.html
+++ b/public html/contatti.html
@@ -27,7 +27,7 @@
 
 <div class="horizontalmenu">
   <ul>
-    <li><a href="nuovo.html">Home</li>
+    <li><a href="nuovo.html"><span xml:lang="en">Home</span></li>
     <li><a href="eventi.xml">Eventi</a></li>
     <li><a href="galleria.html">Galleria</li>
     <li><a href="curiosità.html">Curiosit&#224;</li>
