--- a/public html/curiosità.html
+++ b/public html/curiosità.html
@@ -27,7 +27,7 @@
 
 <div class="horizontalmenu">
   <ul>
-    <li><a href="nuovo.html"></a>Home</li>
+    <li><a href="nuovo.html"></a><span xml:lang="en">Home</span></li>
     <li><a href="eventi.xml">Eventi</a></li>
     <li><a href="galleria.html">Galleria</li>
     <li>Curiosit&#224;</li>
