--- a/public html/index.html
+++ b/public html/index.html
@@ -38,7 +38,7 @@
 
 <div class="horizontalmenu">
   <ul>
-    <li>Home</li>
+    <li><span xml:lang="en">Home</span></li>
     <li><a href="eventi.xml">Eventi</a></li>
     <li><a href="galleria.html">Galleria</a></li>
     <li><a href="curiosita.xml">Curiosit&#224;</a></li>
