--- a/public html/index.html
+++ b/public html/index.html
@@ -13,7 +13,7 @@
 <meta name="rating" content="general" />
 
 <link rel="stylesheet" type="text/css" href="css/custom.css" />
-<link rel="stylesheet" type="text/css" href="mobile.css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)" />
+<link rel="stylesheet" type="text/css" href="css/mobile.css" media="handheld, screen and (max-width:480px), only screen and (max-device-width:480px)" />
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Pinyon+Script" />
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Quattrocento+Sans" />
 
