--- a/public html/contatti.html
+++ b/public html/contatti.html
@@ -28,12 +28,12 @@
 
 <div class="horizontalmenu">
   <ul>
-    <li><a href="nuovo.html"><span xml:lang="en">Home</span></li>
+    <li><a href="nuovo.html"><span xml:lang="en">Home</span></a></li>
     <li><a href="eventi.xml">Eventi</a></li>
-    <li><a href="galleria.html">Galleria</li>
-    <li><a href="curiosità.html">Curiosit&#224;</li>
+    <li><a href="galleria.html">Galleria</a></li>
+    <li><a href="curiosità.html">Curiosit&#224;</a></li>
     <li>Contatti</li>
-    <li><a href="opinioni.xml">Opinioni</li>
+    <li><a href="opinioni.xml">Opinioni</a></li>
   </ul>
 </div>
 
