--- a/public html/contatti.html
+++ b/public html/contatti.html
@@ -56,6 +56,8 @@
   <iframe id="framemappa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2791.636439004152!2d12.161813653816552!3d45.           59785283925472!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47793455f9a39589%3A0x51d35237d1caa79f!2sPro+Loco!5e0!3m2!1sit!2sit!4v1421142899464" width="1600" height="1000" frameborder="0" style="border:0"></iframe>
   </div>
   
+<p>Se hai bisogno di contattare il personale della Pro Loco, allora compila il form seguente.</p>
+  
 <div class="contatti">
 <form action="" method="post">
 
