--- a/public html/contatti.html
+++ b/public html/contatti.html
@@ -28,7 +28,7 @@
 
 <div class="horizontalmenu">
   <ul>
-    <li><a href="nuovo.html"><span xml:lang="en">Home</span></a></li>
+    <li><a href="index.html"><span xml:lang="en">Home</span></a></li>
     <li><a href="eventi.xml">Eventi</a></li>
     <li><a href="galleria.html">Galleria</a></li>
     <li><a href="curiosità.html">Curiosit&#224;</a></li>
