--- a/public html/galleria.html
+++ b/public html/galleria.html
@@ -48,40 +48,29 @@
 
 <h2>Galleria</h2>
   <div class="galleria">
-    <div id="galleriasinistra">
-      <div id="galleriasx">
+    <div class="galleriaverticale">
         <img src="nuoveimmagini/1.png" alt="1"/>
         <img src="nuoveimmagini/2.jpg" alt="2"/>
         <img src="nuoveimmagini/7.jpg" alt="7"/>
-      </div>
-      <div id="galleriadx">
        <img src="nuoveimmagini/3.jpg" alt="3"/>
        <img src="nuoveimmagini/4.png" alt="4"/>
        <img src="nuoveimmagini/8.png" alt="8"/>
-      </div>
-    </div>
-    <div id="galleriadestra">
       <img src="nuoveimmagini/5.png" alt="5"/>
       <img src="nuoveimmagini/6.jpg" alt="6"/>
       <img src="nuoveimmagini/9.jpg" alt="9"/>
-    </div>
-  </div>
+   </div>
   <div class="galleriaorizzontale">
-    <div id="galleriaorsx">
      <img src="nuoveimmagini/1a.jpg" alt="1a"/>
      <img src="nuoveimmagini/2a.jpg" alt="2a"/>
      <img src="nuoveimmagini/3a.jpg" alt="3a"/> 
-    </div>
-    <div id="galleriaordx">
      <img src="nuoveimmagini/4a.jpg" alt="4a"/>
      <img src="nuoveimmagini/5a.jpg" alt="5a"/>
      <img src="nuoveimmagini/6a.jpg" alt="6a"/> 
-    </div>
   </div> 
 </div> 
 
 
-  
+</div>  
     <div class="footer">
   <p>Pro Loco di Zero Branco</p>
   <p>Telefono: <a href="tel:+39042297613">0422 97613</a></p>
