--- a/public html/contatti.html
+++ b/public html/contatti.html
@@ -80,7 +80,7 @@
   <legend>Controllo e invio</legend>
   <input class="button" type="button" name="controlla" id="controlla" value="Controlla campi"  tabindex="11" onclick="controllaCampi();"/>			
 	<input class="button" type="reset" name="cancella"  id="cancella" value="Cancella tutto" tabindex="12" />
-	<input class="button" type="submit" name="bottoneinvia" id="bottoneinvia" value="Invia" tabindex="13"  />
+	<input class="button" type="submit" name="bottoneinvia" id="Invia" value="Invia" tabindex="13"  />
 	
   </form>
   </div> 
